firebase db att

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=8080
-MONGODB_URI=mongodb+srv://user:pass123word@cluster0.zkngjbv.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://user:pass123word@cluster0.zkngjbv.mongodb.net/users?retryWrites=true&w=majority
