--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.3.2",
-<<<<<<< HEAD
-=======
     "@emailjs/browser": "^3.7.0",
->>>>>>> 5f9dc5ebebe9b01a438ae14d2063e14f3ec4e50b
     "@emotion/react": "^11.10.4",
+    "@emotion/serialize": "^1.1.0",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.5",
+    "@mui/utils": "^5.10.3",
     "@react-google-maps/api": "^2.12.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
